Remove DEAny support, rtti and exception for cplusplus

--- a/NBMediaPlayer/platform/Android/build.gradle
+++ b/NBMediaPlayer/platform/Android/build.gradle
@@ -21,8 +21,8 @@ android {
         externalNativeBuild {
             // Encapsulates your CMake build configurations.
             cmake {
-                // Sets optional flags for the C++ compiler.
-                cppFlags "-fexceptions", "-frtti"
+//                // Sets optional flags for the C++ compiler.
+//                cppFlags "-fexceptions", "-frtti"
             }
         }
 
